--- a/public/html/login.html
+++ b/public/html/login.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
+    <script src="../js/login.js"></script>
     <div class="container pt-5">
         <div class="row ">
             <div class="col-md-4 py-5 bg-primary text-white text-center ">
@@ -29,7 +30,7 @@
                 <h4 class="pb-4">Login</h4>
                 <br>
 
-                <form method="POST" action="">
+                <form method="POST" id="login-form">
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
