--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Signup</title>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
+    <script src="../js/signup.js"></script>
     <div class="container pt-5">
         <div class="row ">
             <div class="col-md-4 py-5 bg-primary text-white text-center ">
@@ -29,24 +29,24 @@
                 <h4 class="pb-4">Sign up</h4>
                 <br>
 
-                <form method="POST" action="">
+                <form method="POST" class="register-form">
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input id="Full Name" name="Full Name" placeholder="Full Name" class="form-control" type="text">
+                            <input id="full-name" name="Full Name" placeholder="Full Name" class="form-control" type="text">
                         </div>
 
                         <div class="form-group col-md-6">
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                            <input type="email" class="form-control" id="email" placeholder="Email">
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="password" class="form-control"  placeholder="Password">
+                            <input type="password" class="form-control"  placeholder="Password" id="password">
                         </div>
 
                         <div class="form-group col-md-6">
-                            <input type="password" class="form-control"  placeholder="Confirm">
+                            <input type="password" class="form-control"  placeholder="Confirm" id="confirm-password">
                         </div>
                     </div>
 
@@ -55,7 +55,7 @@
                         <div class="form-group col-md-6">
                             <label class="mr-sm-2" for="inlineFormCustomSelect">Title</label>
 
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="title">
                                 <option selected>Choose...</option>
                                 <option value="1">Student</option>
                                 <option value="2">Instructor</option>
