Add login & signup function (N/C)

--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -29,7 +29,7 @@
                 <h4 class="pb-4">Sign up</h4>
                 <br>
 
-                <form method="POST" class="register-form">
+                <form method="POST" id="register-form">
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <input id="full-name" name="Full Name" placeholder="Full Name" class="form-control" type="text">
@@ -65,7 +65,7 @@
                     <br>
 
                     <div class="form-row">
-                        <button type="button" class="btn btn-danger">Submit</button>
+                        <button type="submit" class="btn btn-danger">Submit</button>
 
                         <a class="btn btn-danger ml-5" href="/">Back</a>
                     </div>
