--- a/public/html/login.html
+++ b/public/html/login.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
     <script src="../js/login.js"></script>
@@ -33,20 +32,20 @@
                 <form method="POST" id="login-form">
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                            <input type="email" class="form-control" id="email" placeholder="Email">
                         </div>
 
                         <div class="form-group col-md-6">
-                            <input type="password" class="form-control"  placeholder="Password">
+                            <input type="password" class="form-control"  id="password" placeholder="Password">
                         </div>
                     </div>
 
                     <br>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label class="mr-sm-2" for="inlineFormCustomSelect">Title</label>
+                            <label class="mr-sm-2" for="title">Title</label>
 
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="title">
                                 <option selected>Choose...</option>
                                 <option value="1">Student</option>
                                 <option value="2">Instructor</option>
@@ -56,7 +55,7 @@
                     <br>
 
                     <div class="form-row">
-                        <button type="button" class="btn btn-danger">Submit</button>
+                        <button type="submit" class="btn btn-danger">Submit</button>
 
                         <a class="btn btn-danger ml-5" href="signup">Singup</a>
                     </div>
