--- a/public/html/sCourse.html
+++ b/public/html/sCourse.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="../css/mainPage.css">
 </head>
 <body>
+    <script src="../js/logout.js"></script>
     <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1 big-text">Course Selection</span>
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn"><i class="fas fa-bars dropbtn"></i></button>
             <div id="myDropdown" class="dropdown-content">
-                <a href="#">Logout</a>
-                </div>
+                <button type="button" class="btn btn-danger" id="logout">Logout</button>
+            </div>
         </div>
     </nav>
 
