--- a/public/html/sDiscussion.html
+++ b/public/html/sDiscussion.html
@@ -15,13 +15,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css" />
 </head>
 <body>
+    <script src="../js/logout.js"></script>
     <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1 big-text">Discussion Selection</span>
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn"><i class="fas fa-bars dropbtn"></i></button>
             <div id="myDropdown" class="dropdown-content">
-                <a href="#">Logout</a>
-                </div>
+                <button type="button" class="btn btn-danger" id="logout">Logout</button>
+            </div>
         </div>
     </nav>
 
