Add register section 11:26am 4/22

--- a/public/html/sCourse.html
+++ b/public/html/sCourse.html
@@ -31,6 +31,21 @@
                 <a href="#" class="list-group-item list-group-item-action">CS3333</a>
                 <a href="#" class="list-group-item list-group-item-action">CS4444</a>
             </div>
+
+            <div class="col p-5">
+                <form method="POST" action="" id="courseCreationForm">
+                    <div class="form-row">
+                        <div class="form-group col">
+                            <input type="text" class="form-control" placeholder="Code">
+                        </div>
+                    </div>
+            
+                    <br>
+                    <div class="form-row">
+                        <button type="button" class="btn btn-danger">Register</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
     <script src="../js/mainPage.js"></script>
