Add course register, and rendering of courses 9:14pm 4/22

--- a/public/html/sCourse.html
+++ b/public/html/sCourse.html
@@ -25,12 +25,13 @@
 
     <div class="container">
         <div class="row">
-            <div class="col p-5">
-                <a href="#" class="list-group-item list-group-item-action">CS1111</a>
-                <a href="#" class="list-group-item list-group-item-action">CS2222</a>
-                <a href="#" class="list-group-item list-group-item-action">CS3333</a>
-                <a href="#" class="list-group-item list-group-item-action">CS4444</a>
+            <div class="col p-5 class-list" id="class-list">
+        
             </div>
+
+            <template id="template">
+                <a href="#" class="list-group-item list-group-item-action"></a>
+            </template>
 
             <div class="col p-5">
                 <form method="POST" id="course-register-form">
