--- a/public/html/sDiscussion.html
+++ b/public/html/sDiscussion.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Discussion Selection</title>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link rel="stylesheet" href="../css/mainPage.css">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css" />
+    <link rel="stylesheet" href="../../css/mainPage.css">
 </head>
 <body>
-    <script src="../js/logout.js"></script>
+    <script src="../../js/sDiscussion.js"></script>
     <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1 big-text">Discussion Selection</span>
         <div class="dropdown">
@@ -27,15 +24,22 @@
     </nav>
 
     <div class="container">
+        <br>
+        <h1 id="welcome" class="row justify-content-center">
+            
+        </h1>
+        <br>
+
         <div class="row">
-            <div class="col p-5">
-                <a href="#" class="list-group-item list-group-item-action">What?</a>
-                <a href="#" class="list-group-item list-group-item-action">How?</a>
-                <a href="#" class="list-group-item list-group-item-action">When?</a>
-                <a href="#" class="list-group-item list-group-item-action">Where</a>
+            <div class="col p-5 class-list" id="discussion-list">
+        
             </div>
+
+            <template id="template">
+                <a href="#" class="list-group-item list-group-item-action"></a>
+            </template>
         </div>
     </div>
-    <script src="../js/mainPage.js"></script>
+    <script src="../../js/mainPage.js"></script>
 </body>
 </html>
