--- a/public/html/iDiscussion.html
+++ b/public/html/iDiscussion.html
@@ -9,14 +9,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link rel="stylesheet" href="../css/mainPage.css">
+    <link rel="stylesheet" href="../../css/mainPage.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css" />
 </head>
 <body>
-    <script src="../js/logout.js"></script>
-    <script src="../js/iDiscussion.js"></script> 
+    <script src="../../js/iDiscussion.js"></script> 
     <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1 big-text">Discussion Selection</span>
         <div class="dropdown">
@@ -28,6 +27,12 @@
     </nav>
 
     <div class="container">
+        <br>
+        <h1 id="welcome" class="row justify-content-center">
+            
+        </h1>
+        <br>
+
         <div class="row">
             <div class="col p-5 class-list" id="d-list">
         
@@ -77,6 +82,6 @@
             </div>
         </div>
     </div>
-    <script src="../js/mainPage.js"></script>
+    <script src="../../js/mainPage.js"></script>
 </body>
 </html>
