Fix error to get datetime 3:40pm 4/29

--- a/public/html/iDiscussion.html
+++ b/public/html/iDiscussion.html
@@ -53,7 +53,7 @@
                     <div class="form-row">
                         <div class="form-group col">
                             <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-                                <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"/>
+                                <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1" id="datetime"/>
                                 <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
                                     <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                 </div>
