Add instructor discussion1:03am 5/6

--- a/public/html/iDiscussion.html
+++ b/public/html/iDiscussion.html
@@ -34,7 +34,7 @@
         <br>
 
         <div class="row">
-            <div class="col p-5 class-list" id="d-list">
+            <div class="col p-5 d-list" id="d-list">
         
             </div>
 
