Fix discussion board bug 5:34pm 5/6

--- a/public/html/discussion.html
+++ b/public/html/discussion.html
@@ -29,7 +29,6 @@
 
         <div class="card text-center">
             <div class="card-header" id="due">
-                Featured
             </div>
             <div class="card-body">
                 <p class="card-text" id="discussion"></p>
@@ -43,7 +42,7 @@
 
                 <div class="card-body">
                     <div class="d-flex">
-                        <h5 class="card-title"></h5>
+                        <h5 class="card-title" id="re"></h5>
                         <h5 class="card-title ml-auto date"></h5>
                     </div>
 
@@ -66,7 +65,7 @@
                 <form method="POST" id="post-d-form">
                     <div class="form-row">
                         <div class="form-group col">
-                            <textarea class="form-control" rows="10" id="discussion"></textarea>
+                            <textarea class="form-control" rows="10" id="reply-post" required></textarea>
                         </div>
                     </div>
             
